# vanity-4b

./: Cargo.toml  README.md  rustfmt.toml
src/: cli.rs  lib.rs  main.rs  utils.rs
tests/: integration_tests.rs  performance_tests.rs
