[package]
edition = "2024"
name = "vanity-4b"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.6" }
gumdrop = "0.8.1"
log = { version = "0.4.26" }
rayon = "1.10.0"
num_cpus = "1.16.0"
keccak-asm = { version = "0.1.4", default-features = false }

[profile.maxperf]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"
